--- a/style/style.css
+++ b/style/style.css
@@ -95,13 +95,13 @@ p {
   height: 24px;
 }
 .social__link-fb {
-  background-image: url(/img/fb.svg);
+  background-image: url(../img/fb.svg);
 }
 .social__link-tw {
-  background-image: url(/img/twitter.svg);
+  background-image: url(../img/twitter.svg);
 }
 .social__link-inst {
-  background-image: url(/img/insta.svg);
+  background-image: url(../img/insta.svg);
 }
 .mute {
   position: absolute;
@@ -141,12 +141,12 @@ p {
   background-position: center;
 }
 .mute__label:before {
-  background-image: url(/img/volume_off.svg);
+  background-image: url(../img/volume_off.svg);
 }
 .mute__label::after {
   right: -22px;
   left: auto;
-  background-image: url(/img/volume_on.svg);
+  background-image: url(../img/volume_on.svg);
 }
 .mute__checkbox:checked + .mute__label:before {
   left: -22px;
@@ -165,7 +165,7 @@ p {
   position: relative;
 }
 .main__index {
-  background-image: url(/img/photo_bg.jpg);
+  background-image: url(../img/photo_bg.jpg);
   background-position: top;
   background-size: cover;
   display: flex;
@@ -289,7 +289,7 @@ height: 100%;
     width: 20px;
     height: 12px;
     background-color: transparent;
-    background-image: url(/img/menu.svg);
+    background-image: url(../img/menu.svg);
     border: none;
   }
   .navigation {
@@ -333,7 +333,7 @@ height: 100%;
     width: 16px;
     height: 16px;
     background-color: transparent;
-    background-image: url(/img/close.svg);
+    background-image: url(../img/close.svg);
     border: none;
   }
   .logo {
@@ -354,7 +354,7 @@ height: 100%;
     justify-content: center;
     padding-bottom: 64px;
     padding-left: 0px;
-    background-image: linear-gradient(0.11deg, rgba(0, 0, 0, 0.76) 32.14%, rgba(255, 0, 0, 0) 72.56%), url(/img/bg_m.jpg);
+    background-image: linear-gradient(0.11deg, rgba(0, 0, 0, 0.76) 32.14%, rgba(255, 0, 0, 0) 72.56%), url(../img/bg_m.jpg);
   }
   .logo{
     width: 125px;
